src/auryn/ast/snapshots/auryn__auryn__ast__tests__control_flow.snap
---
source: src/auryn/ast/mod.rs
expression: "parse(\"loop { if 1 { break } }\")"
---
Ok(
    Node {
        span: Span {
            len: 23,
        },
        kind: Root {
            block: Ok(
                Node {
                    span: Span {
                        len: 23,
                    },
                    kind: Block {
                        statements: [
                            Ok(
                                Node {
                                    span: Span {
                                        len: 23,
                                    },
                                    kind: Loop(
                                        Ok(
                                            Node {
                                                span: Span {
                                                    len: 23,
                                                },
                                                kind: LoopStatement {
                                                    block: Ok(
                                                        Node {
                                                            span: Span {
                                                                len: 15,
                                                            },
                                                            kind: Block {
                                                                statements: [
                                                                    Ok(
                                                                        Node {
                                                                            span: Span {
                                                                                len: 15,
                                                                            },
                                                                            kind: IfStatement(
                                                                                Ok(
                                                                                    Node {
                                                                                        span: Span {
                                                                                            len: 14,
                                                                                        },
                                                                                        kind: IfStatement {
                                                                                            expression: Ok(
                                                                                                Node {
                                                                                                    span: Span {
                                                                                                        len: 2,
                                                                                                    },
                                                                                                    kind: Value(
                                                                                                        Ok(
                                                                                                            Node {
                                                                                                                span: Span {
                                                                                                                    len: 2,
                                                                                                                },
                                                                                                                kind: Number(
                                                                                                                    Ok(
                                                                                                                        Node {
                                                                                                                            span: Span {
                                                                                                                                len: 1,
                                                                                                                            },
                                                                                                                            kind: Number {
                                                                                                                                value: 1,
                                                                                                                            },
                                                                                                                        },
                                                                                                                    ),
                                                                                                                ),
                                                                                                            },
                                                                                                        ),
                                                                                                    ),
                                                                                                },
                                                                                            ),
                                                                                            block: Ok(
                                                                                                Node {
                                                                                                    span: Span {
                                                                                                        len: 6,
                                                                                                    },
                                                                                                    kind: Block {
                                                                                                        statements: [
                                                                                                            Ok(
                                                                                                                Node {
                                                                                                                    span: Span {
                                                                                                                        len: 6,
                                                                                                                    },
                                                                                                                    kind: Break(
                                                                                                                        Ok(
                                                                                                                            Node {
                                                                                                                                span: Span {
                                                                                                                                    len: 5,
                                                                                                                                },
                                                                                                                                kind: BreakStatement,
                                                                                                                            },
                                                                                                                        ),
                                                                                                                    ),
                                                                                                                },
                                                                                                            ),
                                                                                                        ],
                                                                                                    },
                                                                                                },
                                                                                            ),
                                                                                        },
                                                                                    },
                                                                                ),
                                                                            ),
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                },
            ),
        },
    },
)
