src/auryn/ast/snapshots/auryn__auryn__ast__tests__expression-2.snap
---
source: src/auryn/ast/mod.rs
expression: "parse(\"1 + 2 * 3\")"
---
Ok(
    Node {
        span: Span {
            len: 9,
        },
        kind: Root {
            block: Ok(
                Node {
                    span: Span {
                        len: 9,
                    },
                    kind: Block {
                        statements: [
                            Ok(
                                Node {
                                    span: Span {
                                        len: 9,
                                    },
                                    kind: Expression(
                                        Ok(
                                            Node {
                                                span: Span {
                                                    len: 9,
                                                },
                                                kind: BinaryOperation(
                                                    Ok(
                                                        Node {
                                                            span: Span {
                                                                len: 9,
                                                            },
                                                            kind: BinaryOperation {
                                                                lhs: Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 2,
                                                                        },
                                                                        kind: Value(
                                                                            Ok(
                                                                                Node {
                                                                                    span: Span {
                                                                                        len: 2,
                                                                                    },
                                                                                    kind: Number(
                                                                                        Ok(
                                                                                            Node {
                                                                                                span: Span {
                                                                                                    len: 1,
                                                                                                },
                                                                                                kind: Number {
                                                                                                    value: 1,
                                                                                                },
                                                                                            },
                                                                                        ),
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        ),
                                                                    },
                                                                ),
                                                                operator: Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 1,
                                                                        },
                                                                        kind: Plus,
                                                                    },
                                                                ),
                                                                rhs: Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 5,
                                                                        },
                                                                        kind: BinaryOperation(
                                                                            Ok(
                                                                                Node {
                                                                                    span: Span {
                                                                                        len: 5,
                                                                                    },
                                                                                    kind: BinaryOperation {
                                                                                        lhs: Ok(
                                                                                            Node {
                                                                                                span: Span {
                                                                                                    len: 2,
                                                                                                },
                                                                                                kind: Value(
                                                                                                    Ok(
                                                                                                        Node {
                                                                                                            span: Span {
                                                                                                                len: 2,
                                                                                                            },
                                                                                                            kind: Number(
                                                                                                                Ok(
                                                                                                                    Node {
                                                                                                                        span: Span {
                                                                                                                            len: 1,
                                                                                                                        },
                                                                                                                        kind: Number {
                                                                                                                            value: 2,
                                                                                                                        },
                                                                                                                    },
                                                                                                                ),
                                                                                                            ),
                                                                                                        },
                                                                                                    ),
                                                                                                ),
                                                                                            },
                                                                                        ),
                                                                                        operator: Ok(
                                                                                            Node {
                                                                                                span: Span {
                                                                                                    len: 1,
                                                                                                },
                                                                                                kind: Times,
                                                                                            },
                                                                                        ),
                                                                                        rhs: Ok(
                                                                                            Node {
                                                                                                span: Span {
                                                                                                    len: 1,
                                                                                                },
                                                                                                kind: Value(
                                                                                                    Ok(
                                                                                                        Node {
                                                                                                            span: Span {
                                                                                                                len: 1,
                                                                                                            },
                                                                                                            kind: Number(
                                                                                                                Ok(
                                                                                                                    Node {
                                                                                                                        span: Span {
                                                                                                                            len: 1,
                                                                                                                        },
                                                                                                                        kind: Number {
                                                                                                                            value: 3,
                                                                                                                        },
                                                                                                                    },
                                                                                                                ),
                                                                                                            ),
                                                                                                        },
                                                                                                    ),
                                                                                                ),
                                                                                            },
                                                                                        ),
                                                                                    },
                                                                                },
                                                                            ),
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                },
            ),
        },
    },
)
