src/auryn/ast/snapshots/auryn__auryn__ast__tests__expression-3.snap
---
source: src/auryn/ast/mod.rs
expression: "parse(\"1 * 2 + 3\")"
---
Ok(
    Node {
        span: Span {
            len: 9,
        },
        kind: Root {
            block: Ok(
                Node {
                    span: Span {
                        len: 9,
                    },
                    kind: Block {
                        statements: [
                            Ok(
                                Node {
                                    span: Span {
                                        len: 9,
                                    },
                                    kind: Expression(
                                        Ok(
                                            Node {
                                                span: Span {
                                                    len: 9,
                                                },
                                                kind: BinaryOperation {
                                                    lhs: Ok(
                                                        Node {
                                                            span: Span {
                                                                len: 6,
                                                            },
                                                            kind: BinaryOperation {
                                                                lhs: Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 2,
                                                                        },
                                                                        kind: Value(
                                                                            Ok(
                                                                                Node {
                                                                                    span: Span {
                                                                                        len: 1,
                                                                                    },
                                                                                    kind: Int(
                                                                                        1,
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        ),
                                                                    },
                                                                ),
                                                                operator: Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 1,
                                                                        },
                                                                        kind: Times,
                                                                    },
                                                                ),
                                                                rhs: Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 2,
                                                                        },
                                                                        kind: Value(
                                                                            Ok(
                                                                                Node {
                                                                                    span: Span {
                                                                                        len: 1,
                                                                                    },
                                                                                    kind: Int(
                                                                                        2,
                                                                                    ),
                                                                                },
                                                                            ),
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    operator: Ok(
                                                        Node {
                                                            span: Span {
                                                                len: 1,
                                                            },
                                                            kind: Plus,
                                                        },
                                                    ),
                                                    rhs: Ok(
                                                        Node {
                                                            span: Span {
                                                                len: 1,
                                                            },
                                                            kind: Value(
                                                                Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 1,
                                                                        },
                                                                        kind: Int(
                                                                            3,
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                },
            ),
        },
    },
)
